nginx-pod-update.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2023-08-18T16:02:33Z"
  labels:
    app: web_service
  name: nginx
  namespace: default
  resourceVersion: "357692"
  uid: f2d6e267-a1ee-42f6-a63a-704a8fa6becf
spec:
  containers:
  - image: nginx:1.18.0
    imagePullPolicy: IfNotPresent
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-6czng
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: node-1
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-6czng
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2023-08-18T16:02:33Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2023-08-18T16:02:34Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2023-08-18T16:02:34Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2023-08-18T16:02:33Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://e2e3f3cb7cce73473b584143d08c4b2a83657298bc0ea43f548ce31e291ba1f2
    image: docker.io/library/nginx:1.18.0
    imageID: docker.io/library/nginx@sha256:e90ac5331fe095cea01b121a3627174b2e33e06e83720e9a934c7b8ccc9c55a0
    lastState: {}
    name: nginx
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2023-08-18T16:02:34Z"
  hostIP: 10.1.104.111
  phase: Running
  podIP: 192.168.84.153
  podIPs:
  - ip: 192.168.84.153
  qosClass: BestEffort
  startTime: "2023-08-18T16:02:33Z"
