demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: aux1-ab0c3d92-0027-48cb-b197-b9f6ebebfda0.live.alta3.com
    http:
      paths:
      - backend:
          service:
            name: demo-svc
            port:
              number: 80
        path: / 
        pathType: Prefix
