default-deny-np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-1
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: client
    - podSelector:
        matchLabels:
          run: client02
  podSelector:
    matchLabels:
      run: nginx
  policyTypes:
  - Ingress
